# mailfang

./: .dockerignore  .env  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yml  mail.eml  release.sh
.github/workflows/: build.yml
backend/: .gitignore  Cargo.toml  mailswallow.db  test_deref
backend/migrations/2024-01-01-000000_initial_schema/: down.sql  up.sql
backend/migrations/2026-04-15-000001_add_recipient_email_count/: down.sql  up.sql
backend/resources/: Dockerfile.dev
backend/src/: compression.rs  config.rs  csp.rs  db.rs  html.rs  lib.rs  logging.rs  main.rs  models.rs  schema.rs  web.rs
backend/src/db/: attachment.rs  counts.rs  email.rs  emails.rs  mod.rs  save_email.rs  search_query.rs
backend/src/entities/: email_attachments.rs  email_recipients.rs  emails.rs  mod.rs  recipients.rs
backend/src/migration/: m20240101_000001_initial_schema.rs
backend/src/smtp/: mod.rs  parser.rs  server.rs
backend/src/web/: error.rs  frontend.rs  mod.rs  routes.rs  ws.rs
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/resources/: Dockerfile.dev
frontend/src/: App.vue  main.ts  router.ts  style.css  vue-resizable.d.ts
frontend/src/api/: client.ts
frontend/src/components/EmailContent/: EmailAttachments.vue  EmailContent.vue  EmailFooter.vue  EmailHeader.vue  EmailSmtpHeaders.vue  EmailView.vue  FullscreenEmailView.vue  ZoomControls.vue
frontend/src/components/EmailLayout/: EmailLayout.vue  EmailList.vue  EmailSidebar.vue  EmailSidebarInboxes.vue  SearchHelpModal.vue
frontend/src/components/MailContent/: FullscreenEmailView.vue  MailAttachments.vue  MailContent.vue  MailHeader.vue  MailHeaders.vue  MailView.vue  SecurityControls.vue  ZoomControls.vue
frontend/src/components/MailLayout/: MailLayout.vue  MailList.vue  MailSidebar.vue  MailSidebarInboxes.vue
frontend/src/components/MainHeader/: MainHeader.vue
frontend/src/components/settings/: SettingsList.vue
frontend/src/components/shared/Badge/: Badge.vue
frontend/src/components/shared/ButtonGroup/: ButtonGroup.vue
frontend/src/components/shared/CodeViewer/: CodeViewer.vue
frontend/src/components/shared/ContentWrapper/: ContentWrapper.vue
frontend/src/components/shared/CopyBadge/: CopyBadge.vue
frontend/src/components/shared/DropdownMenu/: DropdownMenu.vue
frontend/src/components/shared/Modal/: Modal.vue
frontend/src/components/shared/Spinner/: Spinner.vue
frontend/src/components/shared/Tabs/: Tabs.vue
frontend/src/components/shared/TextInput/: TextInput.vue
frontend/src/components/shared/ThemeToggle/: ThemeToggle.vue
frontend/src/components/shared/Toggle/: Toggle.vue
frontend/src/components/shared/VirtualList/: VirtualList.vue
frontend/src/composables/: useCopy.ts  useWebSocket.ts
frontend/src/helpers/: copy.ts  date.ts  theme.ts
frontend/src/stores/: MailLayout.ts  Search.ts  Theme.ts
frontend/src/types/: email.ts
frontend/src/utils/: emailAddress.ts
testdata/: send_15k.sh
