[package]
name = "mailfang"
version = "0.1.0"
edition = "2024"

[features]
default = []
embed-frontend = ["static-serve"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["multipart", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
mail-parser = "0.11"
smtp-proto = "0.2"
uuid = { version = "1.18", features = ["v4"] }
base64 = "0.22"
md5 = "0.7"
rand = "0.8"
hex = "0.4"
static-serve = { version = "0.4", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
clap = { version = "4.5", features = ["derive", "env"] }
ctrlc = "3.5.1"

[profile.release]
lto = true
