[package]
name = "mailfang"
version = "1.0.0"
edition = "2024"

[features]
default = []
embed-frontend = ["static-serve"]

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
diesel = { version = "2.3", features = ["sqlite", "chrono", "r2d2", "serde_json", "uuid"] }
diesel_migrations = { version = "2.3", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal"] }
socket2 = { version = "0.6", features = ["all"] }
tokio-util = { version = "0.7", features = ["codec"] }
tower-http = { version = "0.6", features = ["fs", "trace", "compression-gzip", "timeout"] }
mail-parser = "0.11"
smtp-proto = "0.2"
uuid = { version = "1.22", features = ["v4"] }
base64 = "0.22"
md5 = "0.8"
rand = "0.10"
hex = "0.4"
static-serve = { version = "0.5", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
clap = { version = "4.6", features = ["derive", "env"] }
flate2 = "1.1"

[profile.release]
lto = true
